--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/hello_mama.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.maateen.me/adorsho-lipi/font.css" rel="stylesheet">
     <title>Hello Mama</title>
   </head>
   <body>
